force-app/main/default/objects/Debug_Log_Detail__c/Debug_Log_Detail__c.object-meta.xml
<CustomObject>
    <description>ECM Individual lines written to a Debug Log</description>
    <label>Debug Log Detail</label>
    <nameField>
        <displayFormat>LINE-{0000}</displayFormat>
        <label>Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debug Log Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>