force-app/main/default/objects/Debug_Log_Detail__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>The code category for which this line was written.</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>