force-app/main/default/objects/Debug_Log_Detail__c/fields/Debug_Log__c.field-meta.xml
<CustomField>
    <fullName>Debug_Log__c</fullName>
    <label>Debug Log</label>
    <referenceTo>Debug_Log__c</referenceTo>
    <relationshipLabel>Debug Log Detail</relationshipLabel>
    <relationshipName>Debug_Log_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>