force-app/main/default/objects/Debug_Log_Detail__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>The LoggingLevel for this line. 7 is Finest, 6 is Finer, 5 is Fine, 4 is Debug, 3 is Info, 2 is Warn, 1 is Error.</description>
    <label>Level</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>