force-app/main/default/objects/Debug_Log_Detail__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The value written for the debug line.</description>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>